[new]日志完善，用户登录添加
