# backend/api/base/auth.pb.go
@@ -1,0 +1,180 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.10
+// 	protoc        v3.21.12
+// source: api/base/auth.proto
+
+package base
+
+import (
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type LoginRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Username      string                 `protobuf:"bytes,1,opt,name=username,proto3" json:"username,omitempty"`
+	Password      string                 `protobuf:"bytes,2,opt,name=password,proto3" json:"password,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *LoginRequest) Reset() {
+	*x = LoginRequest{}
+	mi := &file_api_base_auth_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *LoginRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*LoginRequest) ProtoMessage() {}
+
+func (x *LoginRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_base_auth_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use LoginRequest.ProtoReflect.Descriptor instead.
+func (*LoginRequest) Descriptor() ([]byte, []int) {
+	return file_api_base_auth_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *LoginRequest) GetUsername() string {
+	if x != nil {
+		return x.Username
+	}
+	return ""
+}
+
+func (x *LoginRequest) GetPassword() string {
+	if x != nil {
+		return x.Password
+	}
+	return ""
+}
+
+type LogoutRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *LogoutRequest) Reset() {
+	*x = LogoutRequest{}
+	mi := &file_api_base_auth_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *LogoutRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*LogoutRequest) ProtoMessage() {}
+
+func (x *LogoutRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_base_auth_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use LogoutRequest.ProtoReflect.Descriptor instead.
+func (*LogoutRequest) Descriptor() ([]byte, []int) {
+	return file_api_base_auth_proto_rawDescGZIP(), []int{1}
+}
+
+var File_api_base_auth_proto protoreflect.FileDescriptor
+
+const file_api_base_auth_proto_rawDesc = "" +
+	"\n" +
+	"\x13api/base/auth.proto\x12\x04base\x1a\x1cgoogle/api/annotations.proto\x1a\x1bgoogle/protobuf/empty.proto\"F\n" +
+	"\fLoginRequest\x12\x1a\n" +
+	"\busername\x18\x01 \x01(\tR\busername\x12\x1a\n" +
+	"\bpassword\x18\x02 \x01(\tR\bpassword\"\x0f\n" +
+	"\rLogoutRequest2\xa0\x01\n" +
+	"\x04Auth\x12K\n" +
+	"\x05Login\x12\x12.base.LoginRequest\x1a\x16.google.protobuf.Empty\"\x16\x82\xd3\xe4\x93\x02\x10:\x01*\"\v/auth/login\x12K\n" +
+	"\x06Logout\x12\x13.base.LogoutRequest\x1a\x16.google.protobuf.Empty\"\x14\x82\xd3\xe4\x93\x02\x0e\x12\f/auth/logoutBN\n" +
+	"\x13dev.kratos.api.baseB\tBaseProtoP\x01Z*github.com/example/aichat/backend/api/baseb\x06proto3"
+
+var (
+	file_api_base_auth_proto_rawDescOnce sync.Once
+	file_api_base_auth_proto_rawDescData []byte
+)
+
+func file_api_base_auth_proto_rawDescGZIP() []byte {
+	file_api_base_auth_proto_rawDescOnce.Do(func() {
+		file_api_base_auth_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_api_base_auth_proto_rawDesc), len(file_api_base_auth_proto_rawDesc)))
+	})
+	return file_api_base_auth_proto_rawDescData
+}
+
+var file_api_base_auth_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_base_auth_proto_goTypes = []any{
+	(*LoginRequest)(nil),  // 0: base.LoginRequest
+	(*LogoutRequest)(nil), // 1: base.LogoutRequest
+	(*emptypb.Empty)(nil), // 2: google.protobuf.Empty
+}
+var file_api_base_auth_proto_depIdxs = []int32{
+	0, // 0: base.Auth.Login:input_type -> base.LoginRequest
+	1, // 1: base.Auth.Logout:input_type -> base.LogoutRequest
+	2, // 2: base.Auth.Login:output_type -> google.protobuf.Empty
+	2, // 3: base.Auth.Logout:output_type -> google.protobuf.Empty
+	2, // [2:4] is the sub-list for method output_type
+	0, // [0:2] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_api_base_auth_proto_init() }
+func file_api_base_auth_proto_init() {
+	if File_api_base_auth_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_base_auth_proto_rawDesc), len(file_api_base_auth_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_api_base_auth_proto_goTypes,
+		DependencyIndexes: file_api_base_auth_proto_depIdxs,
+		MessageInfos:      file_api_base_auth_proto_msgTypes,
+	}.Build()
+	File_api_base_auth_proto = out.File
+	file_api_base_auth_proto_goTypes = nil
+	file_api_base_auth_proto_depIdxs = nil
+}
